# templates-cookiecutter

./: README.md
templates/api/: cookiecutter.json
templates/api/hooks/: post_gen_project.py
templates/api/{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  pyproject.toml  scaffold.py
templates/api/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
templates/api/{{cookiecutter.project_slug}}/app/: main.py
templates/api/{{cookiecutter.project_slug}}/app/core/: config.py  exceptions.py
templates/api/{{cookiecutter.project_slug}}/app/health/: service.py
templates/api/{{cookiecutter.project_slug}}/tests/: test_health.py
templates/django-htmx/: README.md  cookiecutter.json
templates/django-htmx/hooks/: post_gen_project.py
templates/django-htmx/{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
templates/django-htmx/{{cookiecutter.project_slug}}/config/: settings.py  urls.py
templates/django-htmx/{{cookiecutter.project_slug}}/config/static/css/: output.css
templates/django-htmx/{{cookiecutter.project_slug}}/templates/: index.html
templates/rpa/: cookiecutter.json
templates/rpa/hooks/: post_gen_project.py
templates/rpa/{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  main.py  pyproject.toml
templates/rpa/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
templates/rpa/{{cookiecutter.project_slug}}/config/: settings.py
templates/rpa/{{cookiecutter.project_slug}}/src/core/: automation.py  exceptions.py
templates/rpa/{{cookiecutter.project_slug}}/src/database/: connection.py
templates/rpa/{{cookiecutter.project_slug}}/src/pages/: base_page.py  home_page.py  login_page.py
templates/rpa/{{cookiecutter.project_slug}}/src/repositories/: base_repository.py
templates/rpa/{{cookiecutter.project_slug}}/src/services/: email_service.py  excel_service.py
templates/rpa/{{cookiecutter.project_slug}}/src/utils/: helpers.py
templates/rpa/{{cookiecutter.project_slug}}/tests/: test_automation.py
