[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "django-browser-reload>=1.21.0",
    "django-cotton>=2.7.2",
    "django-debug-toolbar>=6.3.0",
    "django-environ>=0.13.0",
    "django-htmx>=1.27.0",
    "pytest-django>=4.12.0",
    "whitenoise>=6.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
