[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [{ name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}" }]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
web = ["selenium>=4.0", "playwright>=1.40"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
